Fix menu overlap in catalog

--- a/web-ui/src/main/resources/catalog/views/sextant/less/gn_search_sextant.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/gn_search_sextant.less
@@ -184,6 +184,9 @@
     box-shadow: @sxt-shadow;
     &.sxt-panel-button {
       margin-left: 29.7em;
+      @media (min-width:  1680px) {
+        margin-left: ~"calc(25% + 2em)";
+      }
     }
     &.sxt-adminbtn {
       margin-right: 1.2em;
